--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <canvas class="webgl"></canvas>
-    <script type="module" src="/src/postProcessing.js"></script>
+    <script type="module" src="/src/yuka.js"></script>
   </body>
 </html>
